# MyStudyAppCmake

./: CMakeLists.txt  README.md  main.cpp  pic.qrc  qss.qrc
Controller/: applicationController.cpp  applicationController.h  changePwdController.cpp  changepwdcontroller.h  enrollController.cpp  enrollController.h  loginController.cpp  loginController.h  newWordController.cpp  newWordController.h  reviewController.cpp  reviewController.h  studyCenterController.cpp  studyWordController.cpp  studyWordController.h  studycentercontroller.h  userSpaceController.cpp  userSpaceController.h  viewData.h
Models/: appdata.h  databaseManager.h  databasemanager.cpp  userModel.cpp  userModel.h  wordModel.cpp  wordModel.h
UI/: changePwd.ui  enroll.ui  login.ui  newWord.ui  review.ui  studyCenter.ui  studyWord.ui  userSpace.ui
View/: changePwd.h  changepwd.cpp  enroll.cpp  enroll.h  login.cpp  login.h  mywidght.cpp  mywidght.h  newWord.cpp  newWord.h  review.cpp  review.h  studyCenter.cpp  studyCenter.h  studyWord.cpp  studyWord.h  userSpace.cpp  userSpace.h
qss/: style-1.qss
